# zorder_test

./: .gitignore  CMakeLists.txt  LICENSE  PerformanceTest.cpp  PerformanceTest.h  array.h  array3d.h  main.cpp  morton.h  test2d.cpp  test3d.cpp  test_arrays_2d.cpp  test_arrays_3d.cpp  test_maxwell.cpp  test_morton.cpp  test_ndfx.cpp  test_openmp.cpp
