cmake_minimum_required (VERSION 3.10.2)
project (zorder_test)
set (CMAKE_CXX_FLAGS "-Wall -Wextra -Ofast")
set (CMAKE_CXX_STANDARD 11)
find_package( Boost )
include_directories( ${Boost_INCLUDE_DIRS} )
add_executable(test2d test2d.cpp)
target_link_libraries(test2d Boost::boost)
add_executable(test_morton test_morton.cpp)
