cmake_minimum_required (VERSION 3.10.2)
project (zorder_test)
set (CMAKE_CXX_FLAGS "-Wall -Wextra -Ofast")
set (CMAKE_CXX_STANDARD 11)
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
find_package( MPI )
include_directories( ${MPI_INCLUDE_PATH} )
find_package( Boost )
include_directories( ${Boost_INCLUDE_DIRS} )
add_executable(test2d test2d.cpp)
target_link_libraries(test2d Boost::boost ${MPI_CXX_LIBRARIES})
add_executable(test3d test3d.cpp)
target_link_libraries(test3d Boost::boost ${MPI_CXX_LIBRARIES})
add_executable(test_morton test_morton.cpp)
add_executable(test_openmp test_openmp.cpp)
